force-app/main/default/objects/KimbleOne__ProposalItem__c/KimbleOne__ProposalItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Proposal Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Proposal Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>