force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__ContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractCost__c</fullName>
    <formula>IF( KimbleOne__Proposal__r.KimbleOne__ForecastAtDetailedLevel__c , KimbleOne__DetailedLevelContractCost__c , KimbleOne__HighLevelContractCost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>