force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__ContractMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractMarginAmount__c</fullName>
    <formula>IF ( NOT(ISBLANK(KimbleOne__ContractCost__c)), KimbleOne__ContractRevenue__c - KimbleOne__ContractCost__c, NULL )</formula>
    <label>Contract Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>