force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__DetailedLevelContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DetailedLevelContractCost__c</fullName>
    <label>Detailed Level Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>