force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__DetailedLevelContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DetailedLevelContractRevenue__c</fullName>
    <label>Detailed Level Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>