force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__DetailedLevelEndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DetailedLevelEndDate__c</fullName>
    <label>Detailed Level End Date</label>
    <type>Date</type>
</CustomField>