force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__DetailedLevelStartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DetailedLevelStartDate__c</fullName>
    <label>Detailed Level Start Date</label>
    <type>Date</type>
</CustomField>