force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__DetailedLevelWeightedContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DetailedLevelWeightedContractRevenue__c</fullName>
    <label>Detailed Level Weighted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>