force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__EndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndDate__c</fullName>
    <formula>IF( KimbleOne__Proposal__r.KimbleOne__ForecastAtDetailedLevel__c , KimbleOne__DetailedLevelEndDate__c , KimbleOne__HighLevelEndDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>