force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__HighLevelCcyHighLevelContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HighLevelCcyHighLevelContractRevenue__c</fullName>
    <label>Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>