force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__HighLevelContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HighLevelContractCost__c</fullName>
    <label>Contract Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>