force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__HighLevelContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HighLevelContractRevenue__c</fullName>
    <label>High Level Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>