force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__HighLevelCurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HighLevelCurrencyIsoCode__c</fullName>
    <label>High Level Currency Iso Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>