force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__HighLevelEndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HighLevelEndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>