force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__HighLevelStartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HighLevelStartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>