force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__HighLevelStartDateOffset__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HighLevelStartDateOffset__c</fullName>
    <label>HighLevelStartDateOffset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>