force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__HighLevelWeightedContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HighLevelWeightedContractRevenue__c</fullName>
    <label>High Level Weighted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>