force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__Proposal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>KimbleOne__Proposal__c</referenceTo>
    <relationshipLabel>Proposal Items</relationshipLabel>
    <relationshipName>ProposalItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>