force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__ProposalCostAllocationFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalCostAllocationFactor__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Proposal Cost Allocation Factor</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>