force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__ProposalItemCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalItemCost__c</fullName>
    <formula>BLANKVALUE(KimbleOne__ProposalCostAllocationFactor__c, 1) *  KimbleOne__Proposal__r.KimbleOne__ProposalCost__c</formula>
    <label>Proposal Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>