force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__ProposalItemType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalItemType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Item Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ProposalItemType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Proposal Items</relationshipLabel>
    <relationshipName>ProposalItems</relationshipName>
    <type>Lookup</type>
</CustomField>