force-app/main/default/objects/KimbleOne__ProposalItem__c/fields/KimbleOne__StartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartDate__c</fullName>
    <formula>IF( KimbleOne__Proposal__r.KimbleOne__ForecastAtDetailedLevel__c  , KimbleOne__DetailedLevelStartDate__c , KimbleOne__HighLevelStartDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>